fix(plugins/plugin-patternfly4-themes): patternfly light theme can have low contrast
Fixes #6336

--- a/plugins/plugin-patternfly4-themes/web/scss/patternfly4-light.scss
+++ b/plugins/plugin-patternfly4-themes/web/scss/patternfly4-light.scss
@@ -27,15 +27,16 @@ body.kui--patternfly4[kui-theme='PatternFly4 Light'][kui-theme-style] {
   --color-base06: var(--pf-global--palette--black-900);
   --color-base07: var(--pf-global--palette--black-1000);
   --color-base08: var(--pf-global--palette--red-100);
-  --color-base09: var(--pf-global--palette--orange-300);
-  --color-base0A: var(--pf-global--palette--gold-600);
+  --color-base09: var(--pf-global--palette--gold-500);
+  --color-base0A: var(--pf-global--palette--orange-500);
   --color-base0B: var(--pf-global--palette--green-400);
   --color-base0C: var(--pf-global--palette--light-blue-500);
   --color-base0D: var(--pf-global--palette--blue-400);
   --color-base0E: #d12765;
   --color-base0F: var(--pf-global--palette--purple-300);
 
-  --color-light-red: var(--pf-global--palette--red-200);
+  --color-stripe-01: var(--pf-global--palette--black-300);
+  --color-repl-background-02: var(--color-base01);
 
   --color-base08-rgb: var(--pf-global--palette--red-100-rgb);
   --color-red-rgb: var(--color-base08-rgb);
